<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/delivery_title_label"
        android:layout_width="385dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="New Delivery"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="377dp"
        android:layout_height="600dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="65dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_title_label">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delivery_receiver_name_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Receiver Name:" />

            <EditText
                android:id="@+id/delivery_reciver_name_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:id="@+id/delivery_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Pickup Date:" />

        <DatePicker
            android:id="@+id/delivery_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="261dp"
            android:layout_weight="1"
            android:datePickerMode="spinner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delivery_time_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Pickup Time:" />

            <EditText
                android:id="@+id/delivery_time_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delivery_location_label"
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Pickup Location:" />

            <EditText
                android:id="@+id/delivery_location_input"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:ems="10"
                android:gravity="center_vertical"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/delivery_select_vehicle_label"
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:text="Select Vehicle:" />

            <Spinner
                android:id="@+id/delivery_select_vehicle_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical" />
        </LinearLayout>

        <TextView
            android:id="@+id/delivery_message"
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="Delivery_Message"
            android:textColor="#FF5722"
            android:textSize="20sp" />

        <Button
            android:id="@+id/delivery_next_btn"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="Next"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>